# voice-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
server/: .pre-commit-config.yaml  Dockerfile  create_db_tables.py  pyproject.toml  server.py
server/app/: agent_config.py  agent_tools.py  crud.py  data_loader.py  database.py  items.py  knowledge_base.py  models.py  routers.py  settings.py  utils.py
server/data/: data.json  data.md
server/prompts/: agents_prompts.yml
src/: .pre-commit-config.yaml  __init__.py  __main__.py  knowledge_base.py  logger_config.py  main.py  server.py  settings.py
src/agents_def/: __init__.py  gastronomy_tools.py  main_gastronomy_agent.py  specialized_agents.py
src/app/: agent_config.py  agent_tools.py  knowledge_base.py  model.py  utils.py
src/config/: __init__.py
src/core/: __init__.py  text_agent.py
src/tools/: __init__.py  gastronomy_tools.py
