[project]
name = "voice-assistant"
version = "0.1.0"
description = "Voice assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.18",
    "openai-agents>=0.0.16",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
]
